--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,20 +1,40 @@
 // COLOURS
-$color-primary-dark: #0097A7;
-$color-primary: #00BCD4;
-$color-primary-light: #B2EBF2;
+$color-primary-dark: #AC650E;
+$color-primary: #F0A549;
+$color-primary-2: #FFBE6F;
+$color-primary-light: #FFD29A;
 $color-primary-text: #FFFFFF;
-$color-accent: #FF5722;
+$color-accent: #E1891D;
 $color-primary-text: #212121;
 $color-secondary-text: #757575;
 $color-divider: #BDBDBD;
 
 
 $color-grey-light: #eee;
-$color-grey: #f5f5f5;
-$color-grey-dark: #777;
+$color-grey: #e2e2e2;
+$color-grey-dark: #9b9b9b;
 
 $color-white: #fff;
 $color-black: #000;
+
+
+//$color-primary-0: #F0A549;	// Main Primary color */
+//$color-primary-1: #FFD29A;
+//$color-primary-2: #FFBE6F;
+//$color-primary-3: #E1891D;
+//$color-primary-4: #AC650E;
+
+//$color-secondary-1-0: #F0C349;	// Main Secondary color (1) */
+//$color-secondary-1-1: #FFE39A;
+//$color-secondary-1-2: #FFD86F;
+//$color-secondary-1-3: #E1AC1D;
+//$color-secondary-1-4: #AC810E;
+
+//$color-secondary-2-0: #F07449;	// Main Secondary color (2) */
+//$color-secondary-2-1: #FFB49A;
+//$color-secondary-2-2: #FF946F;
+//$color-secondary-2-3: #E14F1D;
+//$color-secondary-2-4: #AC360E;
 
 // FONTS
 
