--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -42,6 +42,9 @@ html {
 body {
   box-sizing: border-box;
   padding: 2rem; }
+  @media only screen and (max-width: 35.6em) {
+    body {
+      padding: 0; } }
 
 .container {
   background-color: #f5f5f5; }
@@ -54,9 +57,9 @@ body {
   color: #212121; }
 
 .heading-primary {
+  font-size: 2rem;
   color: #fff;
   text-transform: uppercase;
-  margin-bottom: 6rem;
   backface-visibility: hidden; }
 
 .heading-secondary {
@@ -76,13 +79,12 @@ body {
   font-weight: 700;
   text-transform: uppercase;
   margin-bottom: 2rem; }
-  @media only screen and (max-width: 56.25em) {
-    .heading-tertiary {
-      letter-spacing: 10px; } }
   .heading-tertiary--cases {
     margin-left: 4rem; }
-    @media only screen and (max-width: 35.6em) {
+    @media only screen and (max-width: 68.75em) {
       .heading-tertiary--cases {
+        letter-spacing: 10px;
+        text-align: center;
         margin-left: 0;
         width: 100%; } }
   @media only screen and (max-width: 35.6em) {
@@ -175,6 +177,10 @@ body {
   float: left;
   padding-left: 6rem;
   margin-top: -5rem; }
+  @media only screen and (max-width: 30em) {
+    .section-break__left {
+      float: none;
+      margin-top: 0; } }
 
 .section-break--animated {
   animation: moveInTop 3s 3.2s; }
@@ -183,33 +189,44 @@ body {
   width: 6rem;
   transform: translateY(0);
   transition: 0.5s ease-in; }
+  @media only screen and (max-width: 30em) {
+    .section-break img {
+      width: 4rem; } }
   .section-break img:hover {
     transform: translateY(3rem);
     transition: 0.5s ease-in 0.2s; }
 
 .about {
-  margin-top: 8rem;
-  /*
-  &__title {
-    position: absolute;
-    top: 12rem;
-    left: -7rem;
-    transform: rotate(71deg);
-  }
-  */ }
+  margin-top: 8rem; }
+  @media only screen and (min-width: 112.5em) {
+    .about {
+      margin-top: 13rem; } }
   @media only screen and (max-width: 56.25em) {
     .about {
       margin-top: 4rem; } }
+  @media only screen and (max-width: 30em) {
+    .about {
+      margin-top: 0; } }
   .about__background {
     background-color: #B2EBF2;
     padding: 10rem 0;
     clip-path: polygon(0 11%, 100% 0, 100% 100%, 0 85%); }
+    @media only screen and (max-width: 75em) {
+      .about__background {
+        -webkit-clip-path: polygon(0 14%, 100% 0%, 100% 100%, 0 84%);
+        clip-path: polygon(0 14%, 100% 0%, 100% 100%, 0 84%); } }
     @media only screen and (max-width: 56.25em) {
       .about__background {
+        -webkit-clip-path: polygon(0 11%, 100% 5%, 100% 100%, 0 92%);
         clip-path: polygon(0 11%, 100% 5%, 100% 100%, 0 92%); } }
     @media only screen and (max-width: 45.3em) {
       .about__background {
+        -webkit-clip-path: polygon(0 11%, 100% 5%, 100% 100%, 0 93%);
         clip-path: polygon(0 11%, 100% 5%, 100% 100%, 0 93%); } }
+    @media only screen and (max-width: 30em) {
+      .about__background {
+        -webkit-clip-path: polygon(0 9.5%, 100% 5%, 100% 99%, 0 93%);
+        clip-path: polygon(0 9.5%, 100% 5%, 100% 99%, 0 93%); } }
   .about__small {
     position: relative;
     text-align: center;
@@ -248,35 +265,62 @@ body {
     font-size: 1.5rem;
     padding-left: 2rem;
     list-style-image: url(../img/bullet-tick.gif); }
+    @media only screen and (max-width: 30em) {
+      .about__list {
+        padding-left: 12rem; } }
   .about__list-item {
     width: 49%;
     float: left; }
+    @media only screen and (max-width: 30em) {
+      .about__list-item {
+        width: 100%;
+        float: none; } }
 
 .cases {
   margin: 5rem 0; }
-  .cases__container {
+  @media only screen and (max-width: 30em) {
+    .cases {
+      margin: 0; } }
+  .cases__background {
     position: relative;
     background-color: #B2EBF2;
     padding: 6rem 3rem 8rem 3rem;
+    -webkit-clip-path: polygon(0 0%, 100% 5%, 100% 100%, 0 95%);
     clip-path: polygon(0 0%, 100% 5%, 100% 100%, 0 95%);
     display: flex;
     flex-wrap: wrap;
     justify-content: center; }
+    @media only screen and (max-width: 75em) {
+      .cases__background {
+        padding: 6rem 3rem 10rem 3rem; } }
+    @media only screen and (max-width: 68.75em) {
+      .cases__background {
+        padding: 9rem 3rem 13rem 3rem; } }
     @media only screen and (max-width: 56.25em) {
-      .cases__container {
+      .cases__background {
+        -webkit-clip-path: polygon(0 0%, 100% 3%, 100% 100%, 0 97%);
         clip-path: polygon(0 0%, 100% 3%, 100% 100%, 0 97%); } }
     @media only screen and (max-width: 45.3em) {
-      .cases__container {
+      .cases__background {
+        -webkit-clip-path: polygon(0 0%, 100% 2.3%, 100% 100%, 0 97%);
         clip-path: polygon(0 0%, 100% 2.3%, 100% 100%, 0 97%); } }
     @media only screen and (max-width: 35.6em) {
-      .cases__container {
+      .cases__background {
+        -webkit-clip-path: polygon(0 0%, 100% 3.5%, 100% 100%, 0 97%);
         clip-path: polygon(0 0%, 100% 3.5%, 100% 100%, 0 97%);
-        padding: 6rem 1rem 8rem 1rem; } }
+        padding: 4rem 1rem 8rem 1rem; } }
   .cases__title {
     position: absolute;
     left: 4rem;
     top: 4rem;
     transform: rotate(4deg); }
+    @media only screen and (min-width: 112.5em) {
+      .cases__title {
+        transform: rotate(3deg); } }
+    @media only screen and (max-width: 68.75em) {
+      .cases__title {
+        top: 4rem;
+        transform: rotate(7deg); } }
     @media only screen and (max-width: 56.25em) {
       .cases__title {
         transform: rotate(5deg); } }
@@ -289,8 +333,8 @@ body {
         transform: rotate(8deg); } }
     @media only screen and (max-width: 30em) {
       .cases__title {
-        font-size: 2.5rem;
-        transform: rotate(9deg); } }
+        font-size: 2rem;
+        transform: rotate(10.5deg); } }
   .cases__category {
     background-color: #f5f5f5;
     border-radius: 2rem;
@@ -317,29 +361,41 @@ body {
       width: 49%;
       margin-top: 8rem;
       order: -1; }
+      @media only screen and (max-width: 68.75em) {
+        .cases__category--money-laundering {
+          width: 80rem; } }
       @media only screen and (max-width: 56.25em) {
         .cases__category--money-laundering {
           width: 65rem; } }
-      @media only screen and (max-width: 35.6em) {
-        .cases__category--money-laundering {
-          height: 55rem; } }
       @media only screen and (max-width: 45.3em) {
         .cases__category--money-laundering {
           margin-top: 10rem; } }
+      @media only screen and (max-width: 35.6em) {
+        .cases__category--money-laundering {
+          height: 55rem; } }
     .cases__category--rcf {
       width: 49%;
       margin-top: 8rem;
       order: 0; }
+      @media only screen and (max-width: 68.75em) {
+        .cases__category--rcf {
+          width: 80rem;
+          margin-top: 0; } }
       @media only screen and (max-width: 56.25em) {
         .cases__category--rcf {
-          width: 65rem;
-          margin-top: 0; } }
+          width: 65rem; } }
       @media only screen and (max-width: 35.6em) {
         .cases__category--rcf {
           height: 36rem; } }
+      @media only screen and (max-width: 30em) {
+        .cases__category--rcf {
+          height: 44rem; } }
     .cases__category--inquiries {
       width: 100%;
       order: 2; }
+      @media only screen and (max-width: 68.75em) {
+        .cases__category--inquiries {
+          width: 80rem; } }
       @media only screen and (max-width: 56.25em) {
         .cases__category--inquiries {
           width: 65rem; } }
@@ -370,6 +426,11 @@ body {
       border-radius: 1.3rem;
       box-shadow: 2px 3px 1px rgba(0, 0, 0, 0.3);
       opacity: 1.0; }
+    @media only screen and (max-width: 30em) {
+      .cases__list-item:nth-of-type(2n) {
+        background-color: #777;
+        color: #fff;
+        border-radius: .5rem; } }
   .cases__list-item:before {
     content: "";
     display: inline-block;
@@ -388,41 +449,67 @@ body {
         mask-image: url(../img/SVG/quill.svg);
         mask-size: cover;
         background-image: none; } }
+    @media only screen and (max-width: 30em) {
+      .cases__list-item:before {
+        display: none; } }
 
 .contact {
   margin-top: 8rem; }
+  @media only screen and (max-width: 30em) {
+    .contact {
+      margin-top: 0; } }
   .contact__background {
     background-color: #B2EBF2;
     padding: 13rem 2rem;
+    -webkit-clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
     clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%); }
+    @media only screen and (max-width: 75em) {
+      .contact__background {
+        padding: 17rem 2rem 13rem 2rem; } }
+    @media only screen and (max-width: 68.75em) {
+      .contact__background {
+        padding: 18rem 2rem 15rem 2rem; } }
     @media only screen and (max-width: 56.25em) {
       .contact__background {
+        -webkit-clip-path: polygon(0 8%, 100% 0, 100% 88%, 0 97%);
         clip-path: polygon(0 8%, 100% 0, 100% 88%, 0 97%); } }
     @media only screen and (max-width: 35.6em) {
       .contact__background {
         padding-bottom: 16rem; } }
+    @media only screen and (max-width: 30em) {
+      .contact__background {
+        padding-top: 12rem;
+        -webkit-clip-path: polygon(0 8%, 100% 0, 100% 88%, 0 93%);
+        clip-path: polygon(0 8%, 100% 0, 100% 88%, 0 93%); } }
   .contact__content {
     text-align: center;
     position: relative;
     padding-left: 10rem; }
+    @media only screen and (max-width: 68.75em) {
+      .contact__content {
+        padding-left: 0; } }
     @media only screen and (max-width: 56.25em) {
       .contact__content {
-        padding-left: 0;
         text-align: left; } }
   .contact__title {
     position: absolute;
     left: -4rem;
     top: 9rem;
     transform: rotate(-90deg); }
+    @media only screen and (max-width: 68.75em) {
+      .contact__title {
+        left: 33rem;
+        top: -10rem;
+        transform: rotate(-7deg); } }
     @media only screen and (max-width: 56.25em) {
       .contact__title {
         font-size: 4rem;
-        left: 29rem;
-        top: -8rem;
+        left: 26rem;
+        top: -10rem;
         transform: rotate(-4deg); } }
     @media only screen and (max-width: 45.3em) {
       .contact__title {
-        left: 20rem;
+        left: 16rem;
         transform: rotate(-6deg); } }
     @media only screen and (max-width: 35.6em) {
       .contact__title {
@@ -430,9 +517,10 @@ body {
         transform: rotate(-10deg); } }
     @media only screen and (max-width: 30em) {
       .contact__title {
-        font-size: 3.5rem;
-        left: 9rem;
-        transform: rotate(-12deg); } }
+        font-size: 3rem;
+        top: -6rem;
+        left: 8rem;
+        transform: rotate(-13deg); } }
   .contact__options {
     background-color: #f5f5f5;
     padding: 2rem 1rem;
@@ -464,6 +552,9 @@ body {
       margin-top: 0; }
     .contact__options--right {
       margin-top: -7rem; }
+      @media only screen and (max-width: 75em) {
+        .contact__options--right {
+          margin-top: -6.5rem; } }
       @media only screen and (max-width: 56.25em) {
         .contact__options--right {
           margin-top: 0; } }
@@ -479,6 +570,12 @@ body {
   .contact__text {
     font-size: 2rem;
     font-weight: 400; }
+    @media only screen and (max-width: 75em) {
+      .contact__text {
+        font-size: 1.6rem; } }
+    @media only screen and (max-width: 56.25em) {
+      .contact__text {
+        font-size: 2rem; } }
     @media only screen and (max-width: 56.25em) {
       .contact__text--desktop {
         display: none; } }
@@ -599,6 +696,9 @@ body {
 .row {
   max-width: 124rem;
   margin: 0 auto; }
+  @media only screen and (min-width: 112.5em) {
+    .row {
+      max-width: 170rem; } }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
     @media only screen and (max-width: 56.25em) {
@@ -651,10 +751,44 @@ body {
       -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
       clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%);
       height: 85vh; } }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (min-width: 112.5em) {
+    .header {
+      background-position-y: -53rem; } }
+  @media only screen and (max-width: 75em) {
+    .header {
+      background-position-y: 0; } }
+  @media only screen and (max-width: 68.75em) {
     .header {
       height: 80vh;
-      background-position-y: -8rem; } }
+      -webkit-clip-path: none;
+      clip-path: none;
+      background: linear-gradient(173deg, transparent 80%, #f5f5f5 50%) no-repeat, url(../img/hero.jpg) 0 -27rem/cover no-repeat; } }
+  @media only screen and (max-width: 56.25em) {
+    .header {
+      background: linear-gradient(173deg, transparent 80%, #f5f5f5 50%) no-repeat, url(../img/hero.jpg) 0 -23rem/cover no-repeat; } }
+  @media only screen and (max-width: 45.3em) {
+    .header {
+      background: linear-gradient(173deg, transparent 80%, #f5f5f5 50%) no-repeat, url(../img/hero.jpg) 0 -12rem/cover no-repeat; } }
+  @media only screen and (max-width: 35.6em) {
+    .header {
+      background: linear-gradient(173deg, transparent 80%, #f5f5f5 50%) no-repeat, url(../img/hero.jpg) 0 -5rem/cover no-repeat; } }
+  @media only screen and (max-width: 30em) {
+    .header {
+      background: linear-gradient(173deg, transparent 80%, #f5f5f5 50%) no-repeat, url(../img/hero.jpg) 0 -3rem/cover no-repeat; } }
+  .header__title {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    width: 100%;
+    text-align: center;
+    padding: 0.5rem; }
+    @media only screen and (max-width: 30em) {
+      .header__title {
+        display: block;
+        font-size: 1.5rem; } }
 
 .navigation__checkbox {
   display: none; }
@@ -730,6 +864,9 @@ body {
   display: inline-block;
   height: 8rem;
   margin: 1rem; }
+  @media only screen and (max-width: 30em) {
+    .navigation__logo {
+      display: none; } }
   .navigation__logo img {
     width: auto;
     height: 8rem;
@@ -789,8 +926,12 @@ body {
 .navigation__btn:link, .navigation__btn:visited {
   text-decoration: none;
   font-size: 1.5rem;
-  color: #000;
+  color: #fff;
   padding: 1rem; }
+  @media only screen and (min-width: 112.5em) {
+    .navigation__btn:link, .navigation__btn:visited {
+      font-size: 2.5rem;
+      color: #000; } }
   @media only screen and (max-width: 56.25em) {
     .navigation__btn:link, .navigation__btn:visited {
       color: #fff; } }
@@ -803,10 +944,14 @@ body {
   font-size: 1.5rem;
   font-weight: 300;
   padding: 1rem 2rem;
-  color: #000;
+  color: #fff;
   text-decoration: none;
   text-transform: uppercase;
   transition: .2s all ease-out; }
+  @media only screen and (min-width: 112.5em) {
+    .navigation__link:link, .navigation__link:visited {
+      font-size: 2.5rem;
+      color: #000; } }
   @media only screen and (max-width: 56.25em) {
     .navigation__link:link, .navigation__link:visited {
       color: #fff; } }
