--- a/sass/layout/_cases.scss
+++ b/sass/layout/_cases.scss
@@ -77,7 +77,7 @@
   }
 
   &__category {
-    background-color: $color-grey;
+    background-color: $color-primary;
     border-radius: 2rem;
     box-shadow: 3px 4px 1px rgba(0,0,0,.3);
     padding: 1.5rem;
@@ -200,8 +200,8 @@
     }
 
     &:hover {
-      background-color: $color-grey-dark;
-      color: $color-white;
+      background-color: $color-primary-2;
+      color: $color-black;
       border-radius: 1.3rem;
       box-shadow: 2px 3px 1px rgba(0,0,0,.3);
       opacity: 1.0;
@@ -231,13 +231,18 @@
 
     // Newer browsers - masks
     @supports (-webkit-mask-image: url()) or (mask-image: url()) {
-      background-color: $color-accent;
+      background-color: $color-grey;
       -webkit-mask-image: url(../img/SVG/quill.svg);
       -webkit-mask-size: cover;
       mask-image: url(../img/SVG/quill.svg);
       mask-size: cover;
       background-image: none;
     }
+
+  //&__list-item:before +
+  //&__list-item:hover {
+  //  background-color: $color-primary-2;
+  //}
 
     @media only screen and (max-width: $bp-smallest) {
       display: none;
