--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -9,8 +9,8 @@
   &__background {
     background: linear-gradient(
       0,
-      rgba($color-black, 0.8),
-      rgba($color-grey, 0.8));
+      rgba($color-white, 0.5),
+      rgba($color-grey, 0.4));
     padding: 3rem 2rem;
     height: 15rem;
   }
@@ -66,7 +66,7 @@
 
   & a:link,
   a:visited {
-    color: $color-white;
+    color: $color-black;
     text-decoration: none;
   }
 }
