--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -10,7 +10,7 @@
     background: linear-gradient(
       0,
       rgba($color-white, 0.5),
-      rgba($color-grey, 0.4));
+      rgba($color-grey-light, 0.4));
     padding: 3rem 2rem;
     height: 15rem;
   }
