--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -15,7 +15,7 @@
     transform: translate(1px, 2px);
     box-shadow: .7rem .6rem 1rem rgba($color-black, .2);
     background-color: $color-primary-2;
-    color: $color-grey;
+    color: $color-grey-light;
 
     &::after {
       transform: scaleX(1.4) scaleY(1.6);
@@ -47,7 +47,7 @@
     &:hover {
       font-weight: bold;
       border: 3px solid $color-primary-2;
-      color: $color-grey;
+      color: $color-grey-light;
       text-shadow: 2px 1px 1px rgba(0,0,0,.2);
     }
 
