--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -109,7 +109,7 @@
     }
 
     &:hover {
-      color: $color-grey;
+      color: $color-grey-light;
       background-color: $color-primary-2;
       transform: translate(3px, -2px);
     }
@@ -143,7 +143,7 @@
     width: 6rem;
     height: auto;
     padding: 1rem;
-    background-color: $color-white;
+    background-color: $color-grey;
     border-radius: 25%;
 
     @media only screen and (max-width: $bp-smaller) {
@@ -216,7 +216,7 @@
     color: $color-black;
 
     &:hover {
-      color: $color-grey;
+      color: $color-grey-light;
     }
   }
 
