--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -7,7 +7,7 @@
   }
 
   &__button {
-    background-color: $color-grey;
+    background-color: $color-grey-light;
     height: 7rem;
     width: 7rem;
     position: absolute;
@@ -164,7 +164,7 @@
     }
 
     &--mobile {
-      background-color: $color-grey;
+      background-color: $color-grey-light;
       -webkit-clip-path: polygon(0 0, 100% 0, 100% 65%, 0 100%);
       clip-path: polygon(0 0, 100% 0, 100% 65%, 0 100%);
       padding: 1rem 1rem 2rem 1rem;
@@ -242,7 +242,7 @@
     &:link,
     &:visited {
         font-size: 2rem;
-        background-color: $color-grey;
+        background-color: $color-grey-light;
         color: $color-black;
         text-decoration: none;
         padding: 1rem 7rem 1rem 0;
