--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,4 +16,6 @@
 @import "layout/footer";
 @import "layout/grid";
 @import "layout/header";
-@import "layout/navigation"; 
+@import "layout/navigation";
+
+@import "pages/additional-info";
