Final changes to structure and layout ready for review

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -5,7 +5,7 @@ $color-primary-2: #615192;
 $color-primary-light: #887CAF;
 $color-primary-text: #FFFFFF;
 $color-accent: #261758;
-$color-primary-text: #212121;
+$color-primary-text: #e2e2e2;
 $color-secondary-text: #757575;
 $color-divider: #BDBDBD;
 
