--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,14 +8,13 @@
 
 @import "components/button";
 @import "components/section-break";
+@import "components/section-top-bottom";
 
 @import "layout/about";
+@import "layout/additional-info";
 @import "layout/cases";
 @import "layout/contact";
-@import "layout/expertise";
 @import "layout/footer";
 @import "layout/grid";
 @import "layout/header";
 @import "layout/navigation";
-
-@import "pages/additional-info";
