--- a/sass/components/_section-break.scss
+++ b/sass/components/_section-break.scss
@@ -4,10 +4,6 @@
     float: right;
     padding-right: 6rem;
     margin-top: -5rem;
-
-    @media only screen and (max-width: $bp-medium) {
-      margin-top: 0;
-    }
   }
 
   &__left {
@@ -18,6 +14,10 @@
     @media only screen and (max-width: $bp-smallest) {
       float: none;
       margin-top: 0;
+    }
+
+    &--additional-info-below {
+      margin-top: -2rem;
     }
   }
 
