--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -14,35 +14,21 @@
   }
 
   &__background {
-    background-color: $color-primary-light;
-    padding: 10rem 0;
-    clip-path: polygon(0 11%, 100% 0, 100% 100%, 0 85%);
+    background: linear-gradient($color-primary-light, $color-primary);
+  }
 
-    @media only screen and (max-width: $bp-larger) {
-      -webkit-clip-path: polygon(0 14%, 100% 0%, 100% 100%, 0 84%);
-      clip-path: polygon(0 14%, 100% 0%, 100% 100%, 0 84%);
-    }
-
-    @media only screen and (max-width: $bp-medium) {
-      -webkit-clip-path: polygon(0 11%, 100% 5%, 100% 100%, 0 92%);
-      clip-path: polygon(0 11%, 100% 5%, 100% 100%, 0 92%);
-    }
-
-    @media only screen and (max-width: $bp-small) {
-      -webkit-clip-path: polygon(0 11%, 100% 5%, 100% 100%, 0 93%);
-      clip-path: polygon(0 11%, 100% 5%, 100% 100%, 0 93%);
-    }
-
-    @media only screen and (max-width: $bp-smallest) {
-      -webkit-clip-path: polygon(0 9.5%, 100% 5%, 100% 99%, 0 93%);
-      clip-path: polygon(0 9.5%, 100% 5%, 100% 99%, 0 93%);
-    }
+  &__content {
+    padding: 4rem 2rem;
   }
 
   &__small {
     position: relative;
     text-align: center;
     padding-top: 4rem;
+
+    @media only screen and (max-width: $bp-medium) {
+      padding-top: 2rem;
+    }
   }
 
   &__shape {
@@ -79,6 +65,10 @@
     }
   }
 
+  &__heading {
+    font-size: 3rem;
+  }
+
   &__large {
     padding-right: 2rem;
 
@@ -89,8 +79,7 @@
 
   &__list {
     font-size: 1.5rem;
-    padding-left: 2rem;
-    list-style-image: url(../img/bullet-tick.gif);
+    list-style: none;
 
     @media only screen and (max-width: $bp-smallest) {
       padding-left: 12rem;
@@ -104,6 +93,18 @@
     @media only screen and (max-width: $bp-smallest) {
       width: 100%;
       float: none;
+      margin-bottom: .5rem;
+    }
+
+    &::before {
+      content: '\2713';
+      color: $color-grey-light;
+      font-size: 2rem;
+      margin-right: 1rem;
+
+      @media only screen and (max-width: $bp-smaller) {
+        margin-right: .5rem;
+      }
     }
   }
 }
