--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -37,17 +37,6 @@
     @media only screen and (max-width: $bp-small) {
       font-size: 1.3rem
     }
-
-  /* & ul li {
-      list-style: none;
-      display: inline-block;
-      padding: 1rem 2rem;
-
-      @media only screen and (max-width: $bp-small) {
-        padding: 1rem 1rem;
-      }
-    }
-    */
   }
 
   &__list {
@@ -61,6 +50,10 @@
 
     @media only screen and (max-width: $bp-small) {
       padding: 1rem 1rem;
+    }
+
+    @media only screen and (max-width: $bp-smallest) {
+      font-size: 1rem;
     }
   }
 
